[ZEPPELIN-4758] Additional cleanup for Java 8 support
### What is this PR for?

Improve Java 8 support:

- Remove obsolete Java options
- add the check for minimum Java version (Java 8u151) to `zeppelin.sh` & `interpreter.sh`

### What type of PR is it?

Refactoring

### What is the Jira issue?
* ZEPPELIN-4758

### How should this be tested?
* https://travis-ci.org/github/alexott/zeppelin/builds/677566776

Author: Alex Ott <alexott@gmail.com>

Closes #3738 from alexott/ZEPPELIN-4758 and squashes the following commits:

e607ee61a [Alex Ott] [ZEPPELIN-4758] Additional cleanup for Java 8 support

(cherry picked from commit b68248b542cab019609ff3a91ec82879ceb8c45a)
Signed-off-by: Alex Ott <alexott@apache.org>